manifests/tdarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: jovian-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tdarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: tdarr
        image: ghcr.io/haveagitgat/tdarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8265
          name: webui
        - containerPort: 8266
          name: server  
        volumeMounts:
        - name: config
          mountPath: /app/server
          subPath: server
        - name: config
          mountPath: /app/logs
          subPath: logs
        - name: smb-media
          mountPath: /media
        - name: smb-media
          mountPath: /app/configs
          subPath: media/tdarr/configs
        - name: smb-media
          mountPath: /temp
          subPath: media/tdarr/cache
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tdarr-pvc
      - name: smb-media
        persistentVolumeClaim:
          claimName: tdarr-smb-media-pvc
